<resources>
    <string name="app_name">MarriedKittensofTesco</string>
    <string name="username">Username</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="choose_a_topic">Choose a Topic</string>
    <string name="books_logo">books logo</string>
    <string name="games">Games</string>
    <string name="games_logo">games logo</string>
    <string name="sports">Sports</string>
    <string name="sports_logo">sports logo</string>
    <string name="books">Books</string>
    <string name="movies">Movies</string>
    <string name="movies_logo">movies logo</string>
    <string name="music">Music</string>
    <string name="music_logo">music logo</string>
    <string name="user_or_password_incorrect">User or password incorrect!</string>
    <string name="music_quiz">Music Quiz</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/X</string>
    <string name="_20s">20s</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text">Here will be the question text\nHere will be the question text\nHere will be the question text</string>
    <string name="confirm">Confirm</string>
    <string name="option_4">Option 4</string>
    <string name="hs">HS:</string>
    <string name="sign_in">Sign in!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="level">Level:</string>
    <string name="hello">Hello,</string>
    <string name="_50_50">50/50</string>
</resources>