<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapp"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/books_img"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:contentDescription="@string/books_logo"
        android:src="@drawable/books"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/books_txt"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_img"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/games_txt"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:text="@string/games"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sports_txt"
        app:layout_constraintVertical_bias="0.377" />

    <ImageView
        android:id="@+id/games_img"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:contentDescription="@string/games_logo"
        android:src="@drawable/games"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/games_txt"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sports_img"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/sports_txt"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:text="@string/sports"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/books_txt"
        app:layout_constraintVertical_bias="0.228" />

    <ImageView
        android:id="@+id/sports_img"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:contentDescription="@string/sports_logo"
        android:src="@drawable/sports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sports_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/books_img"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/books_txt"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:text="@string/books"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_txt"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/movies_txt"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:text="@string/movies"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_txt"
        app:layout_constraintVertical_bias="0.134" />

    <ImageView
        android:id="@+id/movies_img"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:contentDescription="@string/movies_logo"
        android:src="@drawable/movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/movies_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_img"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/music_txt"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginTop="72dp"
        android:text="@string/music"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/music_img"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/music_logo"
        android:src="@drawable/music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/music_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/topics"
        android:layout_width="252dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:text="@string/choose_a_topic"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/hs_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:text="@string/hs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/music_txt"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/hs_movies"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="168dp"
        android:text="@string/hs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/movies_txt"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/hs_books"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="248dp"
        android:text="@string/hs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/books_txt"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/hs_sports"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="328dp"
        android:text="@string/hs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/sports_txt"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/hs_games"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="388dp"
        android:text="@string/hs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/games_txt"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>